--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-django
-numpy
-
+chardet==2.3.0
+Django==2.2.24
+numpy==1.18.5
+pycurl==7.43.0
+Pygments==2.1
+pygobject==3.20.0
+python-apt==1.1.0b1+ubuntu0.16.4.1
+pytz==2021.1
+PyYAML==3.11
+requests==2.9.1
+six==1.10.0
+sqlparse==0.4.1
+ssh-import-id==5.5
+tk==0.1.0
+unattended-upgrades==0.1
+urllib3==1.13.1
